# gfcc

./: CMakeLists.txt
.github/workflows/: github_actions.yml
ci/reference_output/: co.cc-pvdz.gfccsd.json  h2o.cc-pvdz.gfccsd.json
ci/scripts/: compare_results.py
contrib/TAMM/: CMakeLists.txt
contrib/TAMM/src/tamm/: block_mult_plan.hpp  blockops_cpu.hpp  eigen_utils.hpp  proc_group.hpp  tamm_utils.hpp
contrib/TAMM/src/tamm/kernels/: multiply.hpp
docs/: install.md
driver/: CCSD_T.cpp  CD_CCSD.cpp  CholeskyDecomp.cpp  HartreeFock.cpp
src/gfcc/: CMakeLists.txt  gf_ccsd.hpp  gf_guess.hpp  gfccsd_ip.hpp
src/gfcc/contrib/: ccsd_util.hpp  ccse_tensors.hpp  cd_ccsd_cs_ann.hpp  cd_svd_ga.hpp  input_parser.hpp  scf_common.hpp  two_index_transform.hpp
src/gfcc/contrib/ccsd_t/: ccsd_t_all_fused.hpp  ccsd_t_all_fused_sycl.hpp
tests/: c60.json  co.json  cytosine.json  example.json  guanine.json  guanine_cytosine_2bp.json  guanine_cytosine_3bp.json  guanine_cytosine_bp.json  h2o.json
tests/sample_outputs/: h2o.out
